api/k8s/develop/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
    project: 3tier
spec:
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/gasilva-clgx/api:{tag}

          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - port: 8081
      targetPort: 8081
  type: LoadBalancer
  loadBalancerIP: 34.122.27.31

# RECOMMENDATION:
# WHEN ADDING NEW BACKEND SERVICES WE SHOULD MOVE AWAY FROM LOAD BALANCER
# AND START USING A INGRESS.
# NOTE: STILL KEEP A LOAD BALANCER FOR FRONT END APPS

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: api
# spec:
#   selector:
#     app: api
#   ports:
#     - port: 8081
#       targetPort: 8081
#   type: NodePort
